--- a/src/includes/nav.pug
+++ b/src/includes/nav.pug
@@ -1,6 +1,6 @@
 nav.nav(data-scroll-sticky)
 	.container.nav__container
-		a(href="index.html").nav__logo website boilerplate
+		a(href="index.html").nav__logo M/L
 		.nav__icon
 			span
 			span
