--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -1,6 +1,6 @@
 .nav {
-	padding: s(4) 0 s(12);
-	position: relative;
+	padding: s(1) 0 s(12);
+	position: fixed;
 	z-index: 10;
 	&__container {
 		border-bottom: 1px solid rgba($color-dark, 0.25);
