--- a/src/styles/global/_page.scss
+++ b/src/styles/global/_page.scss
@@ -1,8 +1,8 @@
 * {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-  }
-  
+}
+
 html {
 	@media (max-width: $to-tiny) {
 		font-size: $size-default;
@@ -37,6 +37,8 @@ html {
 	body {
 		font-family: $font-text;
 		background: $color-white;
+		width: 100%;
+		height: 100%;
 	}
 	&.has-scroll-smooth {
 		overflow: hidden;
