--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -2,6 +2,7 @@
 	&__title {
 		display: flex;
 		align-items: center;
+		width: 100%;
 		h1 {
 			font-size: f(4);
 		}
@@ -20,7 +21,7 @@
 		img {
 			opacity: 0;
 			transform: scale(1.1);
-			transition: opacity 1.5s $ease, transform 1.5s $ease;
+			transition: opacity 1.5s;
 		}
 		&.is-inview {
 			img {
